[package]
name = "vectorize"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
description = "Converts maps to vecs for serialization"
license = "MIT"
readme = "README.md"

[dependencies]
serde = "1.0.125"

[dev-dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
