[package]
name = "vectorize"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
description = "Converts maps to vecs for serialization"
repository = "https://github.com/deniskolodin/vectorize"
license = "MIT"
readme = "README.md"

[dependencies]
serde = "1.0.126"

[dev-dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
